При регистрации добавлена проверка username и email на уникальность
