# docs/swagger/swagger.json
@@ -26,7 +26,7 @@
                         "name": "request",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_module_auth_request.Login"
+                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_core_api_module_auth_request.Login"
                         }
                     }
                 ],
@@ -34,19 +34,19 @@
                     "200": {
                         "description": "Успешный ответ.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_module_auth_response.Token"
+                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_core_api_module_auth_response.Token"
                         }
                     },
                     "400": {
                         "description": "Не валидный запрос.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_shared_response.Error400"
+                            "$ref": "#/definitions/response.Error400"
                         }
                     },
                     "401": {
                         "description": "Не верное имя пользователя или пароль.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_shared_response.Error401"
+                            "$ref": "#/definitions/response.Error401"
                         }
                     },
                     "500": {
@@ -94,7 +94,7 @@
                         "name": "request",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_module_auth_request.Refresh"
+                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_core_api_module_auth_request.Refresh"
                         }
                     }
                 ],
@@ -102,19 +102,19 @@
                     "200": {
                         "description": "Успешный ответ.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_module_auth_response.Token"
+                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_core_api_module_auth_response.Token"
                         }
                     },
                     "400": {
                         "description": "Не валидный запрос.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_shared_response.Error400"
+                            "$ref": "#/definitions/response.Error400"
                         }
                     },
                     "401": {
                         "description": "Неверный или просроченный токен обновления.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_shared_response.Error401"
+                            "$ref": "#/definitions/response.Error401"
                         }
                     },
                     "500": {
@@ -143,8 +143,7 @@
                         "type": "integer",
                         "example": 0,
                         "name": "from",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -165,19 +164,19 @@
                     "200": {
                         "description": "Успешный ответ.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_module_game_response.List"
+                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_core_api_module_game_response.List"
                         }
                     },
                     "400": {
                         "description": "Не валидный запрос.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_shared_response.Error400"
+                            "$ref": "#/definitions/response.Error400"
                         }
                     },
                     "401": {
                         "description": "Невалидный токен.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_shared_response.Error401"
+                            "$ref": "#/definitions/response.Error401"
                         }
                     },
                     "500": {
@@ -204,7 +203,7 @@
                         "name": "request",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_module_game_request.Create"
+                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_core_api_module_game_request.Create"
                         }
                     }
                 ],
@@ -212,19 +211,19 @@
                     "200": {
                         "description": "Успешный ответ.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_module_game_response.Create"
+                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_core_api_module_game_response.Create"
                         }
                     },
                     "400": {
                         "description": "Не валидный запрос.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_shared_response.Error400"
+                            "$ref": "#/definitions/response.Error400"
                         }
                     },
                     "401": {
                         "description": "Невалидный токен.",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_shared_response.Error401"
+                            "$ref": "#/definitions/response.Error401"
                         }
                     },
                     "500": {
@@ -262,7 +261,7 @@
         }
     },
     "definitions": {
-        "github_com_Brotiger_per-painted_poker-backend_app_module_auth_request.Login": {
+        "github_com_Brotiger_per-painted_poker-backend_core_api_module_auth_request.Login": {
             "type": "object",
             "required": [
                 "email",
@@ -279,29 +278,29 @@
                 }
             }
         },
-        "github_com_Brotiger_per-painted_poker-backend_app_module_auth_request.Refresh": {
+        "github_com_Brotiger_per-painted_poker-backend_core_api_module_auth_request.Refresh": {
             "type": "object",
             "properties": {
-                "refreshToken": {
+                "refresh_token": {
                     "type": "string",
                     "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJodHRwczovL2V4YW1wbGUuYXV0aDAuY29tLyIsImF1ZCI6Imh0dHBzOi8vYXBpLmV4YW1wbGUuY29tL2NhbGFuZGFyL3YxLyIsInN1YiI6InVzcl8xMjMiLCJpYXQiOjE0NTg3ODU3OTYsImV4cCI6MTQ1ODg3MjE5Nn0.CA7eaHjIHz5NxeIJoFK9krqaeZrPLwmMmgI_XiQiIkQ"
                 }
             }
         },
-        "github_com_Brotiger_per-painted_poker-backend_app_module_auth_response.Token": {
+        "github_com_Brotiger_per-painted_poker-backend_core_api_module_auth_response.Token": {
             "type": "object",
             "properties": {
-                "accessToken": {
+                "access_token": {
                     "type": "string",
                     "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJodHRwczovL2V4YW1wbGUuYXV0aDAuY29tLyIsImF1ZCI6Imh0dHBzOi8vYXBpLmV4YW1wbGUuY29tL2NhbGFuZGFyL3YxLyIsInN1YiI6InVzcl8xMjMiLCJpYXQiOjE0NTg3ODU3OTYsImV4cCI6MTQ1ODg3MjE5Nn0.CA7eaHjIHz5NxeIJoFK9krqaeZrPLwmMmgI_XiQiIkQ"
                 },
-                "refreshToken": {
+                "refresh_token": {
                     "type": "string",
                     "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJodHRwczovL2V4YW1wbGUuYXV0aDAuY29tLyIsImF1ZCI6Imh0dHBzOi8vYXBpLmV4YW1wbGUuY29tL2NhbGFuZGFyL3YxLyIsInN1YiI6InVzcl8xMjMiLCJpYXQiOjE0NTg3ODU3OTYsImV4cCI6MTQ1ODg3MjE5Nn0.CA7eaHjIHz5NxeIJoFK9krqaeZrPLwmMmgI_XiQiIkQ"
                 }
             }
         },
-        "github_com_Brotiger_per-painted_poker-backend_app_module_game_request.Create": {
+        "github_com_Brotiger_per-painted_poker-backend_core_api_module_game_request.Create": {
             "type": "object",
             "required": [
                 "max_players",
@@ -324,14 +323,14 @@
                 }
             }
         },
-        "github_com_Brotiger_per-painted_poker-backend_app_module_game_response.Create": {
+        "github_com_Brotiger_per-painted_poker-backend_core_api_module_game_response.Create": {
             "type": "object",
             "properties": {
                 "_id": {
                     "type": "string",
                     "example": "507f1f77bcf86cd799439011"
                 },
-                "maxPlayers": {
+                "max_players": {
                     "type": "integer",
                     "example": 5
                 },
@@ -339,7 +338,7 @@
                     "type": "string",
                     "example": "test"
                 },
-                "ownerId": {
+                "owner_id": {
                     "type": "string",
                     "example": "507f1f77bcf86cd799439011"
                 },
@@ -362,10 +361,10 @@
                 }
             }
         },
-        "github_com_Brotiger_per-painted_poker-backend_app_module_game_response.Game": {
+        "github_com_Brotiger_per-painted_poker-backend_core_api_module_game_response.Game": {
             "type": "object",
             "properties": {
-                "countPlayers": {
+                "count_players": {
                     "type": "integer",
                     "example": 3
                 },
@@ -373,7 +372,7 @@
                     "type": "string",
                     "example": "507f1f77bcf86cd799439011"
                 },
-                "maxPlayers": {
+                "max_players": {
                     "type": "integer",
                     "example": 4
                 },
@@ -381,7 +380,7 @@
                     "type": "string",
                     "example": "test"
                 },
-                "ownerId": {
+                "owner_id": {
                     "type": "string",
                     "example": "507f1f77bcf86cd799439011"
                 },
@@ -389,19 +388,19 @@
                     "type": "string",
                     "example": "waiting"
                 },
-                "withPassword": {
+                "with_password": {
                     "type": "boolean",
                     "example": true
                 }
             }
         },
-        "github_com_Brotiger_per-painted_poker-backend_app_module_game_response.List": {
+        "github_com_Brotiger_per-painted_poker-backend_core_api_module_game_response.List": {
             "type": "object",
             "properties": {
                 "games": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_app_module_game_response.Game"
+                        "$ref": "#/definitions/github_com_Brotiger_per-painted_poker-backend_core_api_module_game_response.Game"
                     }
                 },
                 "total": {
@@ -410,7 +409,7 @@
                 }
             }
         },
-        "github_com_Brotiger_per-painted_poker-backend_app_shared_response.Error400": {
+        "response.Error400": {
             "type": "object",
             "properties": {
                 "errors": {},
@@ -419,7 +418,7 @@
                 }
             }
         },
-        "github_com_Brotiger_per-painted_poker-backend_app_shared_response.Error401": {
+        "response.Error401": {
             "type": "object",
             "properties": {
                 "message": {
